--- a/Lesson1/CV-The_Dark_Knight.html
+++ b/Lesson1/CV-The_Dark_Knight.html
@@ -6,6 +6,75 @@
     <title>CV - The Dark Knight</title>
 </head>
 <body>
-    
+    <div>
+        <h1>Bruce Wayne</h1>
+        <p>
+            <b>Billionaire</b> | <i>Philanthropist</i> | <strong>(Secretly Batman)</strong>
+        </p>
+        <p>
+            <small>Adress: Batcave, Under Wayne Manor, Gotham City</small>
+            <br>
+            <small>Contact: <a href="mailto:alfred@wayne.com" title="Alfred checks my emails">alfred@wayne.com</a> or use the Bat-Signal</small>
+        </p>
+    </div>
+    <hr>
+    <div>
+        <h2>Objective</h2>
+        <p>
+            To rid Gotham City of crime and ensure <mark>JUSTICE</mark> is served. I aim to be the World's 1<sup>st</sup> greatest detective.
+        </p>
+    </div>
+    <div>
+        <h2>Work Experience</h2>
+        <h3>CEO & Chairman</h3>
+        <i>Wayne Entarprises (Inherited - Present)</i>
+        <ul>
+            <li>Attending boring board meetings.</li>
+            <li>Budget allocation: <del>Charity Galas</del> <ins>Developing high-tech gadgets and tank-cars</ins>.</li>
+            <li>Acting like a spoiled playboy to hide my identity.</li>
+        </ul>
+        <h3>Vigilante & Protector</h3>
+        <i>The Night (Forever)</i>
+        <br>
+        <br>
+        Responsible for catching clowns and solving riddles.
+        <br>
+        <br>
+        <strong>Key Achievements:</strong>
+        <ul>
+            <li>Defeated Bane (eventually).</li>
+            <li>Neutralized Scarecrow's Fear Toxin (Chemical Formula: C<sub>20</sub>H<sub>25</sub>N<sub>3</sub>O).</li>
+            <li>Saved Gotham <sup>infinity</sup> times.</li>
+        </ul>
+    </div>
+    <hr>
+    <div>
+        <h2>Equipment & Skills</h2>
+        <dl>
+            <dt><b>The Batmobile</b></dt><dd>It comes in black. Very fast.</dd>
+            <dt><b>Batarang</b></dt><dd>Like a boomerang, but sharper and cooler.</dd>
+            <dt><b>Utility Belt</b></dt><dd>Contains shark repellent, smoke pellets, and snacks.</dd>
+        </dl>
+    </div>
+    <div>
+        <h2>Enimies to Capture (Priority List)</h2>
+        <ol>
+            <li>The Joker <small>(Very annoying)</small></li>
+            <li>The Penguin</li>
+            <li>The Riddler</li>
+            <li>Superman <small>(If he turns evil)</small></li>
+        </ol>
+    </div>
+    <hr>
+    <div>
+        <h2>Education</h2>
+        <strong>League of Shadows</strong>
+        <br>
+        <i>Ninja Training</i>
+        <br>
+        Status: <del>Graduated</del> <ins>Destroyed the temple</ins>
+    </div>
+    <br>
+    <br>
 </body>
 </html>
